had to commit half-finished cause it stopped running for some reason
corrected needed top-margin for banner to not overlap navbar in mobile

--- a/styles/Projects.scss
+++ b/styles/Projects.scss
@@ -6,15 +6,16 @@
     flex-direction: column;
     align-items: center;
     gap: 30px;
-    margin: 30px 60px;
+    margin: 30px 0;
   }
   
   .project {
     display: flex;
+    // flex-wrap: wrap;
     justify-content: space-between;
     gap: 80px;
     max-width: 900px;
-    min-width: 500px;
+    // min-width: 500px;
     padding: 20px;
     background-color: var(--bg-color-1);
     border: 1px solid var(--border-color-1);
@@ -69,6 +70,7 @@
   
   .languages {
     display: flex;
+    flex-wrap: wrap;
     gap: 5px;
   }
   
