--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -46,7 +46,7 @@ body {
   width: 100%;
   background-color: #1e1e1e;
   z-index: 5;
-  height: 50px;
+  height: fit-content;
 
   #logo {
     display: flex;
@@ -91,7 +91,6 @@ body {
 @media(max-width: 500px) {
   #navbar {
     flex-direction: column;
-    height: fit-content;
   }
 }
 
@@ -203,18 +202,15 @@ position: relative;
     0% { opacity: 0; scale: 0; }
     100% { opacity: 1; scale: 1; }
   }
-  
-  @media(max-width: 500px) {
-    #banner {
-      padding: 50px;
-    }
-    #banner h1 {
-      font-size: 3.5rem;
-    }
-  }
 }
 
 @media(max-width: 500px) {
+  body {
+    padding-top: 100px;
+  }
+  #banner {
+    padding: 50px;
+  }
   #banner h1 {
     font-size: 3rem;
   }
